--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@wojtekmaj/react-hooks": "^1.21.0",
     "next": "14.2.4",
+    "node-qpdf": "^1.0.3",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "2.8.335",
+    "qpdf": "^0.1.0-prealpha.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
